--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
+    "@mui/x-data-grid": "^7.10.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
