--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.6.4",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
+    "openai": "^4.52.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
