Add email sending

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=suvenir_shop;Username=postgres;Password=admin"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUser": "suvenirshopapplication@gmail.com",
+    "SmtpPass": "plir wjfs skof noks"
+  }
 }
