--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
     "@mui/x-data-grid": "^7.10.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
@@ -17,10 +18,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-redux": "^9.1.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "rimraf": "^5.0.0",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
