--- a/appsettings.json
+++ b/appsettings.json
@@ -7,13 +7,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Host=localhost;Database=suvenir_shop;Username=postgres;Password=admin"
   },
   "AllowedHosts": "*",
   "Email": {
-    "SmtpServer": "",
-    "SmtpPort": 1,
-    "SmtpUser": "",
-    "SmtpPass": ""
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUser": "suvenirshopapplication@gmail.com",
+    "SmtpPass": "plir wjfs skof noks"
   }
 }
